oem-config (0.10) UNRELEASED; urgency=low

  * Remove unused moduledir variable.
  * Remove passwd menu entry, now moved to user-setup.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon,  2 Jan 2006 14:21:26 +0000

oem-config (0.9) breezy; urgency=low

  * Quieten output from deluser.
  * Quieten output from debconf-communicate while resetting passwd/user-uid.
  * Try setting LANG to the value of debian-installer/fallbacklocale if the
    value of debian-installer/locale isn't a valid locale (Ubuntu #17366).
  * Set labels in passwd and timezone windows to the translated descriptions
    of the same questions in the installer; sync text of passwd labels with
    the text in passwd.templates (Ubuntu #17366).
  * Re-register passwd/user-fullname and passwd/username templates to
    themselves rather than debian-installer/dummy (although it's a bug
    somewhere in preseeding that they're left this way) so that we get
    useful translated descriptions for them.
  * Set title of timezone window to the translated description of
    tzconfig/title. Unfortunately this is too hard to do for the passwd
    window at present.
  * Exiting oem-config can leave you without a configured user, so try not
    to exit unnecessarily. If we have to, then print an error message with
    instructions and drop the user to a shell, since that's better than a
    login prompt with no users.
  * Reload /var/lib/dpkg/info/base-config.templates for timezone question;
    for some reason the translations seem to be getting lost from it.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 11 Oct 2005 21:41:41 +0100

oem-config (0.8) breezy; urgency=low

  * Remove the temporary OEM configuration user before running oem-config.
  * Reset passwd/user-uid before running oem-config, so that the new user is
    created at uid 1000 rather than 29999.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon,  3 Oct 2005 13:04:42 +0100

oem-config (0.7) breezy; urgency=low
